# daisy-env

./: .gitignore  .gitmodules  CMakeLists.txt  NOTES.md  README.md  conan.conf  conanfile.txt  host_audiomidi.cpp  main.cpp  test.cpp  test_daisysp.cpp  test_host_realtime.cpp
lib/test/primitive/: saw.cpp  saw.hpp
src/: main.cpp
test/: CMakeLists.txt  test_daisysp.cpp  test_host_realtime.cpp
